[package]
name = "fadroma"
version = "0.1.0"
authors = ["Adam Avramov <adam@hack.bg>", "Milen Radkov <milen@hack.bg>"]
edition = "2018"

homepage = "https://github.com/hackbg/fadroma"
repository = "https://github.com/hackbg/fadroma"
keywords = ["fadroma", "CosmWasm", "smart", "contracts", "blockchain"]
readme = "README.md"
license-file = "LICENSE"
description = "fadroma bulldozes all the repetitive boilerplate code around writing CosmWasm contracts, and lets you define the skeleton of your actual contract logic in a terse syntax."

[lib]
doctest=false

[dependencies]
